# evently-management-system

./: README.md  pyproject.toml
Evently/: .gitignore  README.md  db.sqlite3  manage.py
Evently/Evently/: asgi.py  settings.py  urls.py  wsgi.py
Evently/events/: admin.py  models.py  serializers.py  tasks.py  utils.py  views.py
Evently/events/migrations/: 0001_initial.py  0002_eventcategory_event_category.py  0003_alter_event_category.py  0004_alter_event_category.py  0005_eventuser_is_approved.py  0006_rename_is_approved_eventuser_is_approved.py
Evently/frontend/: admin.py  urls.py  views.py
Evently/frontend/static/frontend/scripts/: top-bar.js
Evently/frontend/static/frontend/styles/: index.css
Evently/frontend/static/frontend/styles/blocks/: card.css  catalogs.css  events.css  footer.css  header.css  icon.css  ivents.css  main.css  menu.css  nav.css  page.css  top-bar.css
Evently/frontend/static/frontend/styles/forms/: form.css  formAdmin.css  (+3 more)
Evently/frontend/templates/frontend/: admin.html  base.html  events.html  home.html  index.html
Evently/frontend/templates/frontend/forms/: adminAddPost.html  adminChangePost.html  baseform.html  log-in.html  login.html  logup.html  sign-up.html
Evently/frontend/templates/frontend/partials/: footer.html  header.html  main.html  menu.html  top-bar.html
Evently/home/: views.py
Evently/verification/: forms.py  models.py  serializers.py  urls.py  views.py
Evently/verification/migrations/: 0001_initial.py  0002_customuser_is_superuser.py
Evently/verification/templates/verification/: login.html  register.html
(+2 files in other folders)
